--- a/todo/src/app/components/task/task.component.html
+++ b/todo/src/app/components/task/task.component.html
@@ -3,21 +3,15 @@
 <div *ngIf="taskList?.length; else notask">
   <ul class="list-group">
     <li *ngFor="let task of taskList" class="list-group-item">
-      {{task.id}} -- {{task.name}} -- {{task.category}}
-      <button type="button" (click)="editTask(event,task)" class="btn btn-info">Editar</button>
-      <button type="button" (click)="deleteTask(event,task)" class="btn btn-danger">Eliminar</button>
+      {{task.name}} -- {{task.category}}
+      <button type="button" (click)="editTask(event,task)" class="btn btn-info mx-2">Editar</button>
+      <button type="button" (click)="deleteTask(event,task)" class="btn btn-danger mx-2">Eliminar</button>
     </li>
   </ul>
 </div>
 <br>
 <h2> Agregar Nueva Tarea </h2>
 <form (ngSubmit)="addTask()">
-  <div class="form-group">
-    <label for="id">Id</label>
-    <div class="form-input">
-      <input type="text" class="form-input" name="id" [(ngModel)]="task.id"/>
-    </div>
-  </div>
 
   <div class="form-group">
     <label for="id">Nombre</label>
