--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,6 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <app-task></app-task>
+<div class="container">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+</div>
