Modulos creados: Proyecto y Atenticacion

--- a/todo/src/app/components/header/header.component.html
+++ b/todo/src/app/components/header/header.component.html
@@ -1,3 +1,5 @@
 <a [routerLink]="['/inicio']" class="btn btn-default mr-2">Inicio</a>
 <a [routerLink]="['/task']" class="btn btn-default mr-2">Tasks</a>
 <a [routerLink]="['/tarea/tarea']" class="btn btn-default mr-2">Tareas List</a>
+<a [routerLink]="['/project/']" class="btn btn-default mr-2">Proyecto</a>
+<a [routerLink]="['/auth']" class="btn btn-default mr-2">Auth</a>
